syntax = "proto3";
package erda.msp.apm.notifygroup;
option go_package = "github.com/erda-project/erda-proto-go/msp/apm/notifygroup/pb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common/openapi.proto";

service NotifyGroupService {
  option (erda.common.openapi_service) = {
    service: "msp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };

  rpc CreateNotifyGroup (CreateNotifyGroupRequest) returns (CreateNotifyGroupResponse) {
    option (google.api.http)     = {
      post: "/api/msp/notify-groups"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups"
    };
  }
  rpc QueryNotifyGroup (QueryNotifyGroupRequest) returns (QueryNotifyGroupResponse) {
    option (google.api.http)     = {
      get: "/api/msp/notify-groups"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups"
    };
  }
  rpc GetNotifyGroup (GetNotifyGroupRequest) returns (GetNotifyGroupResponse) {
    option (google.api.http)     = {
      get: "/api/msp/notify-groups/{groupID}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups/{groupID}"
    };
  }
  rpc UpdateNotifyGroup (UpdateNotifyGroupRequest) returns (UpdateNotifyGroupResponse) {
    option (google.api.http)     = {
      put: "/api/msp/notify-groups/{groupID}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups/{groupID}"
    };
  }
  rpc GetNotifyGroupDetail (GetNotifyGroupDetailRequest) returns (GetNotifyGroupDetailResponse) {
    option (google.api.http)     = {
      get: "/api/msp/notify-groups/{groupID}/detail"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups/{groupID}/detail"
    };
  }
  rpc DeleteNotifyGroup (DeleteNotifyGroupRequest) returns (DeleteNotifyGroupResponse) {
    option (google.api.http)     = {
      delete: "/api/msp/notify-groups/{groupID}"
    };
    option (erda.common.openapi) = {
      path: "/api/msp/notify-groups/{groupID}"
    };
  }
}

message CreateNotifyGroupRequest {
  string                name        = 1;
  string                scopeType   = 2;
  string                scopeId     = 3;
  repeated NotifyTarget targets     = 4;
  string                creator     = 5;
  string                label       = 6;
  string                clusterName = 7;
  bool                  autoCreate  = 8 [json_name = "-"];
  int64                 orgID       = 9 [json_name = "-"];
}

message NotifyTarget {
  string          type   = 1;
  repeated Target values = 2;
}

message Target {
  string receiver = 1;
  string secret   = 2;
}

message CreateNotifyGroupResponse {
  NotifyGroup data = 1;
}
message NotifyGroup {
  int64                     id        = 1;
  string                    name      = 2;
  string                    scopeType = 3;
  string                    scopeId   = 4;
  repeated NotifyTarget     targets   = 5;
  google.protobuf.Timestamp createdAt = 6;
  string                    creator   = 7;
  string                    label     = 8;
}

message QueryNotifyGroupRequest {
  int64           pageNo      = 1;
  int64           pageSize    = 2;
  string          scopeType   = 3;
  string          scopeId     = 4;
  string          label       = 5;
  string          clusterName = 6;
  repeated string names       = 7;
}

message QueryNotifyGroupResponse {
  QueryNotifyGroupData data = 1;
}

message QueryNotifyGroupData {
  repeated NotifyGroup list  = 1;
  int64                total = 2;
}

message GetNotifyGroupRequest {
  int64 groupID = 1;
}

message GetNotifyGroupResponse {
  NotifyGroup     data    = 1;
  repeated string userIDs = 2;
}

message UserInfo {
  string id          = 1;
  string name        = 2;
  string nick        = 3;
  string avatar      = 4;
  string phone       = 5;
  string email       = 6;
  string token       = 7;
  string lastLoginAt = 8;
  string pwdExpireAt = 9;
  string source      = 10;
}

message UpdateNotifyGroupRequest {
  int64                 id      = 1;
  string                name    = 2;
  repeated NotifyTarget targets = 3;
  int64                 groupID = 4;
}

message UpdateNotifyGroupResponse {
  NotifyGroup data = 1;
}

message GetNotifyGroupDetailRequest {
  int64 groupID = 1;
}

message GetNotifyGroupDetailResponse {
  NotifyGroupDetail data = 1;
}

message NotifyGroupDetail {
  int64                 id                     = 1;
  string                name                   = 2;
  string                scopeType              = 3;
  string                scopeId                = 4;
  repeated NotifyUser   users                  = 5;
  repeated NotifyTarget targets                = 6;
  repeated Target       dingdingList           = 7;
  repeated Target       dingdingWorknoticeList = 8;
  repeated string       webhookList            = 9;
}

message NotifyUser {
  string id       = 1;
  string username = 2;
  string email    = 3;
  string mobile   = 4;
  string type     = 5;
}

message DeleteNotifyGroupRequest {
  int64 groupID = 1;
}

message DeleteNotifyGroupResponse {
  NotifyGroup data = 1;
}
